[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/UI/UI_btn_close.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/UI_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/UI_button3.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/UI_square1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Choko.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Prefabs/Store.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Prefabs/GridInventory.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fonts/Choko.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 9 )

[node name="Invetory" type="Popup"]
pause_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="molder" type="TextureRect" parent="."]
margin_left = 149.0
margin_top = 30.0
margin_right = 437.0
margin_bottom = 280.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 168.0
margin_top = 48.0
margin_right = 415.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mochila"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="."]
margin_left = 272.0
margin_top = 84.0
margin_right = 404.0
margin_bottom = 241.0
columns = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_use" type="TextureButton" parent="."]
anchor_left = 0.384
anchor_top = 0.58
anchor_right = 0.384
anchor_bottom = 0.58
margin_left = 176.0
margin_top = 191.0
margin_right = 267.0
margin_bottom = 220.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_use"]
margin_left = 5.29599
margin_top = 0.820007
margin_right = 96.296
margin_bottom = 27.82
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Usar"
align = 1
valign = 1

[node name="btn_drop" type="TextureButton" parent="."]
anchor_left = 0.384
anchor_top = 0.58
anchor_right = 0.384
anchor_bottom = 0.58
margin_left = 176.0
margin_top = 222.0
margin_right = 267.0
margin_bottom = 251.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_drop"]
margin_right = 91.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Excluir"
align = 1
valign = 1

[node name="btn_close" type="TextureButton" parent="."]
anchor_left = 0.901
anchor_top = 0.048
anchor_right = 0.901
anchor_bottom = 0.048
margin_left = 406.0
margin_top = 35.0
margin_right = 430.0
margin_bottom = 55.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_details" type="Node2D" parent="."]
position = Vector2( 220, 101 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="box_details"]
scale = Vector2( 2.5, 2.5 )
hframes = 3
vframes = 3

[node name="label" type="Label" parent="box_details/sprite"]
margin_left = -9.0
margin_top = -2.0
margin_right = 9.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="animation" type="AnimationPlayer" parent="box_details"]
autoplay = "idle"
anims/idle = SubResource( 4 )

[node name="name" type="Label" parent="box_details"]
margin_left = -30.0
margin_top = 19.0
margin_right = 30.0
margin_bottom = 35.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="quantity" type="Label" parent="box_details"]
margin_left = -8.0
margin_top = 29.0
margin_right = 8.0
margin_bottom = 45.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="btn_use" to="." method="_on_btn_use_pressed"]
[connection signal="pressed" from="btn_drop" to="." method="_on_btn_drop_pressed"]
[connection signal="pressed" from="btn_close" to="." method="_on_btn_close_pressed"]
